data/all_generated_tests/raw_wast_tests/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1274.wast
;; 5. **Test with Conditional Branches and Imports:**    - Use conditional branching (`if` condition) along with `br` instructions in a function within module A and call imported functions from module B in the branches. The aim is to ensure stack integrity and proper branching behavior when control crosses module boundaries conditionally.    - **Constraint Checked:** Correct label indexing and stack management in conditional branches with cross-module calls.    - **Relation to Constraint:** Ensures conditional branch instructions correctly interact with imported functions across module boundaries.

(assert_invalid
  (module
    (func (import "B" "imported_func") (param i32) (result i32))
    (func $test
      (block (result i32)
        (if i32
          (i32.const 1)
          (then
            (br 1 (call_imported_func (i32.const 0)))
          )
          (else
            (i32.const 2)
          )
        )
      )
    )
  )
  "unknown label"
)